Fri Oct 19 16:59:54 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: Change 'attributes' type
	from int to byte.

Thu Oct 18 18:13:12 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Modify
	implementation of non-manifold edges.  Non-manifold edges with the
	same support are now linked through a circular doubly-linked list,
	and no more with a LinkedHashMap.  This way, HalfEdge.sym member
	can be an HalfEdge instance, which removes many special cases.

Tue Oct 16 16:28:26 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractTriangle.java: Let 'vertex'
	member be an AbstractVertex array.
	* src/org/jcae/mesh/amibe/ds/ElementFactory.java (createVertex): If
	adjacency relations are requested, this method creates a Vertex
	instance, otherwise an AbstractVertex instance is created.
	* src/org/jcae/mesh/bora/xmldata/Storage.java
	  src/org/jcae/mesh/xmldata/MeshReader.java
	  src/org/jcae/mesh/amibe/ds/Mesh.java: When reading mesh from disk,
	do not call Vertex.setLink(), this is now done by Mesh.buildAdjacency().

Tue Oct 16 12:32:16 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyVH.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java
	  src/org/jcae/mesh/amibe/ds/AdjacencyHE.java
	  src/org/jcae/mesh/amibe/ds/TriangleHE.java: Make AdjacencyVH an
	inner class of TriangleVH and AdjacencyHE an inner class of
	TriangleHE.
	* src/org/jcae/mesh/amibe/ds/AbstractVertex.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java: Move param member and
	getUV() method from Vertex into AbstractVertex, all vertex classes
	need coordinates.

Mon Oct 15 16:35:55 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
